<resources>
    <string name="facebook_app_id">153191282504758</string>
    <string name="fb_login_protocol_scheme">fb153191282504758</string>
    <string name="app_name">Pacify</string>
    <string name="signUp">SIGN UP FREE</string>
    <string name="contWithFacebook">CONTINUE WITH FACEBOOK</string>
    <string name="login">LOG IN</string>
    <string name="pacify">PACIFY</string>
    <string name="slogan">Music for your negative energy</string>
    <string name="emailRequest">What\'s your email?</string>

    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_log_in">LOG IN</string>
    <string name="login_forgot_your_password">FORGOT YOUR PASSWORD?</string>
    <string name="signup_what_s_your_email">What\'s your email?</string>
    <string name="signup_you_ll_need_to_confirm_this_email_later">You\'ll need to confirm this email later.</string>
    <string name="signup_next">NEXT</string>
    <string name="login_wrong_email_or_password_msg">This email and password combination is incorrect.</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_search">Search</string>
    <string name="navigation_your_library">Your Library</string>
    <string name="signup_whats_your_email">What\'s your email?</string>
    <string name="signup_email_hint">You\'ll need to confirm this email later.</string>
    <string name="signup_next_btn">NEXT</string>
    <string name="forgetpassword_email_hint">We\'ll send a link to your email to recover your password.</string>
    <string name="forgetpassord_button">GET LINK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
