<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252525"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/signUp_button"
        android:layout_width="0dp"
        android:layout_height="45sp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="144dp"
        android:background="@drawable/green_roundbutton"
        android:letterSpacing="0.1"
        android:text="@string/signUp"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_forget_password_button"
        android:layout_width="0dp"
        android:layout_height="45sp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="38dp"
        android:background="@drawable/roundbutton"
        android:letterSpacing="0.1"
        android:text="@string/contWithFacebook"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_button" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="45sp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="38dp"
        android:background="@android:color/transparent"
        android:letterSpacing="0.1"
        android:text="@string/login"
        android:textColor="#B8B8B8"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_forget_password_button" />

    <TextView
        android:id="@+id/PACIFY_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/pacify"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/slogan_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="30dp"
        android:text="@string/slogan"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/signUp_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PACIFY_text"
        app:layout_constraintVertical_bias="0.336" />


</androidx.constraintlayout.widget.ConstraintLayout>